tests/baselines/reference/arrayAssignmentTest2.errors.txt
==== tests/cases/compiler/arrayAssignmentTest2.ts (10 errors) ====
    interface I1 {
        IM1():void[];
    }
    
    class C1 implements I1 { 
        IM1():void[] {return null;}
        C1M1():C1[] {return null;}
     }
    class C2 extends C1 {
        C2M1():C2[] { return null;}
    }
    
    class C3 {
        CM3M1() { return 3;}
    }
    
    
    /*
    
    This behaves unexpectedly with teh following types:
    
    Type 1 of any[]:
    
    * Type 2 of the following throws an error but shouldn't: () => void[], SomeClass[], and {one: 1}[].
    
    * Type 2 of the following doesn't throw an error but should: {one: 1}, new() => SomeClass, SomeClass.
    
    */
    var a1 : any = null;
    var c1 : C1 = new C1();
    var i1 : I1 = c1;
    var c2 : C2 = new C2();
    var c3 : C3 = new C3();
    var o1 = {one : 1};
    var f1 = function () { return new C1();}
    
    var arr_any: any[] = [];
    var arr_i1: I1[] = [];
    var arr_c1: C1[] = [];
    var arr_c2: C2[] = [];
    var arr_i1_2: I1[] = [];
    var arr_c1_2: C1[] = [];
    var arr_c2_2: C2[] = [];
    var arr_c3: C3[] = [];
    
    // "clean up bug" occurs at this point
    arr_c3 = arr_c2_2; // should be an error - is
    ~~~~~~
!!! arrayAssignmentTest2.ts(47,1): error TS2012: Cannot convert 'C2[]' to 'C3[]':
!!! 	Types of property 'pop' of types 'C2[]' and 'C3[]' are incompatible:
!!! 		Call signatures of types '() => C2' and '() => C3' are incompatible:
!!! 			Type 'C2' is missing property 'CM3M1' from type 'C3'.
    arr_c3 = arr_c1_2; // should be an error - is
    ~~~~~~
!!! arrayAssignmentTest2.ts(48,1): error TS2012: Cannot convert 'C1[]' to 'C3[]':
!!! 	Types of property 'pop' of types 'C1[]' and 'C3[]' are incompatible:
!!! 		Call signatures of types '() => C1' and '() => C3' are incompatible:
!!! 			Type 'C1' is missing property 'CM3M1' from type 'C3'.
    arr_c3 = arr_i1_2; // should be an error - is
    ~~~~~~
!!! arrayAssignmentTest2.ts(49,1): error TS2012: Cannot convert 'I1[]' to 'C3[]':
!!! 	Types of property 'pop' of types 'I1[]' and 'C3[]' are incompatible:
!!! 		Call signatures of types '() => I1' and '() => C3' are incompatible:
!!! 			Type 'I1' is missing property 'CM3M1' from type 'C3'.
    
    arr_any = f1; // should be an error - is
    ~~~~~~~
!!! arrayAssignmentTest2.ts(51,1): error TS2012: Cannot convert '() => C1' to 'any[]':
!!! 	Type '() => C1' is missing property 'concat' from type 'any[]'.
    arr_any = function () { return null;} // should be an error - is
    ~~~~~~~
!!! arrayAssignmentTest2.ts(52,1): error TS2012: Cannot convert '() => any' to 'any[]':
!!! 	Type '() => any' is missing property 'concat' from type 'any[]'.
    arr_any = o1; // should be an error - is
    ~~~~~~~
!!! arrayAssignmentTest2.ts(53,1): error TS2012: Cannot convert '{ one: number; }' to 'any[]':
!!! 	Type '{ one: number; }' is missing property 'concat' from type 'any[]'.
    arr_any = a1; // should be ok - is
    arr_any = c1; // should be an error - is
    ~~~~~~~
!!! arrayAssignmentTest2.ts(55,1): error TS2012: Cannot convert 'C1' to 'any[]':
!!! 	Type 'C1' is missing property 'concat' from type 'any[]'.
    arr_any = c2; // should be an error - is
    ~~~~~~~
!!! arrayAssignmentTest2.ts(56,1): error TS2012: Cannot convert 'C2' to 'any[]':
!!! 	Type 'C2' is missing property 'concat' from type 'any[]'.
    arr_any = c3; // should be an error - is
    ~~~~~~~
!!! arrayAssignmentTest2.ts(57,1): error TS2012: Cannot convert 'C3' to 'any[]':
!!! 	Type 'C3' is missing property 'concat' from type 'any[]'.
    arr_any = i1; // should be an error - is
    ~~~~~~~
!!! arrayAssignmentTest2.ts(58,1): error TS2012: Cannot convert 'I1' to 'any[]':
!!! 	Type 'I1' is missing property 'concat' from type 'any[]'.
    